// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator shows a validator profile information errors signing info is missing 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Mr Mounty
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          2.26%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #100
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime / Missed Blocks
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          5.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          10.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          0.50%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          a few seconds ago
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user has signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Mr Mounty
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          2.26%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #100
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime / Missed Blocks
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          5.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          10.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          0.50%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          a few seconds ago
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user hasn't signed in 1`] = `
<tmpage-stub
  class="small"
  data-title="Validator"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="status-container"
    >
      <span
        class="validator-status green"
      >
        Active
      </span>
    </div>
     
    <tr
      class="li-validator"
    >
      <td
        class="data-table__row__info"
      >
        <apolloquery-stub
          debounce="0"
          options="[object Object]"
          prefetch="true"
          query="[object Object]"
          tag="div"
          throttle="0"
          update="function () { [native code] }"
          variables="[object Object]"
        />
         
        <div
          class="validator-info"
        >
          <h3
            class="li-validator-name"
          >
            
            mr_mounty
          
          </h3>
           
          <!---->
        </div>
      </td>
    </tr>
     
    <div
      class="button-container"
    >
      <tmbtn-stub
        id="delegation-btn"
        value="Stake"
      />
       
      <tmbtn-stub
        disabled="true"
        id="undelegation-btn"
        type="secondary"
        value="Unstake"
      />
    </div>
     
    <ul
      class="row"
    >
      <li
        class="column"
      >
        <h4>
          Description
        </h4>
         
        <span>
          
          Mr Mounty
        
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Website
        </h4>
         
        <span>
          <a
            href="https://www.monty.ca"
            id="validator-website"
            rel="nofollow noreferrer noopener"
            target="_blank"
          >
            https://www.monty.ca
          </a>
        </span>
      </li>
       
      <li
        class="column"
      >
        <h4>
          Validator Address
        </h4>
         
        <span>
          <bech32-stub
            address="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
          />
        </span>
      </li>
    </ul>
     
    <ul
      class="row"
    >
      <li>
        <h4>
          Rewards
        </h4>
         
        <span
          id="page-profile__rewards"
        >
          
          2.26%
        
        </span>
      </li>
       
      <li>
        <h4>
          Voting Power / Total Stake
        </h4>
         
        <span
          id="page-profile__power"
        >
          
          0.33% /
          0
        
        </span>
      </li>
       
      <li>
        <h4>
          Self Stake
        </h4>
         
        <span
          id="page-profile__self-bond"
        >
          
          1.00% / 10,000
        
        </span>
      </li>
       
      <li>
        <h4>
          Validator Since
        </h4>
         
        <span>
          
          Block #100
        
        </span>
      </li>
       
      <li>
        <h4>
          Uptime / Missed Blocks
        </h4>
         
        <span
          id="page-profile__uptime"
        >
          
          99.6% /
          2
        
        </span>
      </li>
       
      <li>
        <h4>
          Current Commission Rate
        </h4>
         
        <span>
          5.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Commission Rate
        </h4>
         
        <span>
          10.00%
        </span>
      </li>
       
      <li>
        <h4>
          Max Daily Commission Change
        </h4>
         
        <span>
          0.50%
        </span>
      </li>
       
      <li>
        <h4>
          Last Commission Change
        </h4>
         
        <span>
          a few seconds ago
        </span>
      </li>
    </ul>
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions=""
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to=""
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows a validator as an inactive candidate if he has no voting_power 1`] = `"Inactive"`;

exports[`PageValidator shows a validator profile information shows that a validator is jailed 1`] = `"Jailed"`;

exports[`delegationTargetOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "good_greg - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;
